// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Chapter Chapter with props 1`] = `
<div
  class="h-full"
>
  <div
    class="p-panelmenu p-component h-full"
  >
    <div
      class="p-panelmenu-panel"
    >
      <div
        class="p-component p-panelmenu-header"
      >
        <a
          aria-controls="pv_id_2_content"
          class="p-panelmenu-header-link"
          id="pv_id_2_header"
          tabindex="0"
        >
          <span
            class="p-panelmenu-icon pi pi-chevron-right"
          />
           
          <span
            class="p-menuitem-icon pi pi-fw pi-file"
          />
           
          <span
            class="p-menuitem-text"
          >
            Premier chapitre
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_2_header"
        class="p-toggleable-content"
        id="pv_id_2_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-panelmenu-content"
        >
          <ul
            class="p-submenu-list p-panelmenu-root-submenu"
            role="tree"
          >
            <li
              class="p-menuitem"
              role="none"
            >
              <a
                class="mock-link p-menuitem-link"
                role="treeitem"
              >
                <span
                  class="p-menuitem-icon"
                />
                 
                <span
                  class="p-menuitem-text"
                >
                  Première page
                </span>
              </a>
               
              <div
                class="p-toggleable-content"
                style="display: none;"
              >
                <!---->
              </div>
            </li>
             
            <!---->
            <li
              class="p-menuitem"
              role="none"
            >
              <a
                class="mock-link p-menuitem-link"
                role="treeitem"
              >
                <span
                  class="p-menuitem-icon"
                />
                 
                <span
                  class="p-menuitem-text"
                >
                  Deuxième page
                </span>
              </a>
               
              <div
                class="p-toggleable-content"
                style="display: none;"
              >
                <!---->
              </div>
            </li>
             
            <!---->
          </ul>
        </div>
      </div>
    </div>
    <div
      class="p-panelmenu-panel"
    >
      <div
        class="p-component p-panelmenu-header"
      >
        <a
          aria-controls="pv_id_2_content"
          class="p-panelmenu-header-link"
          id="pv_id_2_header"
          tabindex="0"
        >
          <span
            class="p-panelmenu-icon pi pi-chevron-right"
          />
           
          <span
            class="p-menuitem-icon pi pi-fw pi-file"
          />
           
          <span
            class="p-menuitem-text"
          >
            Deuxième chapitre
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_2_header"
        class="p-toggleable-content"
        id="pv_id_2_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-panelmenu-content"
        >
          <ul
            class="p-submenu-list p-panelmenu-root-submenu"
            role="tree"
          >
            <li
              class="p-menuitem"
              role="none"
            >
              <a
                class="mock-link p-menuitem-link"
                role="treeitem"
              >
                <span
                  class="p-menuitem-icon"
                />
                 
                <span
                  class="p-menuitem-text"
                >
                  Troisième page
                </span>
              </a>
               
              <div
                class="p-toggleable-content"
                style="display: none;"
              >
                <!---->
              </div>
            </li>
             
            <!---->
            <li
              class="p-menuitem"
              role="none"
            >
              <a
                class="mock-link p-menuitem-link"
                role="treeitem"
              >
                <span
                  class="p-menuitem-icon"
                />
                 
                <span
                  class="p-menuitem-text"
                >
                  Quatrième page
                </span>
              </a>
               
              <div
                class="p-toggleable-content"
                style="display: none;"
              >
                <!---->
              </div>
            </li>
             
            <!---->
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Chapter Chapter without props 1`] = `
<div
  class="h-full"
>
  <div
    class="p-panelmenu p-component h-full"
  >
    <div
      class="p-panelmenu-panel"
    >
      <div
        class="p-component p-panelmenu-header"
      >
        <a
          aria-controls="pv_id_1_content"
          class="p-panelmenu-header-link"
          id="pv_id_1_header"
          tabindex="0"
        >
          <span
            class="p-panelmenu-icon pi pi-chevron-right"
          />
           
          <span
            class="p-menuitem-icon pi pi-fw pi-file"
          />
           
          <span
            class="p-menuitem-text"
          >
            Aucun chapitre à afficher
          </span>
        </a>
      </div>
       
      <div
        aria-labelledby="pv_id_1_header"
        class="p-toggleable-content"
        id="pv_id_1_content"
        role="region"
        style="display: none;"
      >
        <div
          class="p-panelmenu-content"
        >
          <ul
            class="p-submenu-list p-panelmenu-root-submenu"
            role="tree"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
